# ParallelProject

./: .gitignore  CMakeLists.txt  Dockerfile  ParallelProject.code-workspace  README.md  index.md
.github/workflows/: main.yml
cmake/: Dependencies.cmake
src/: CMakeLists.txt  flags.cpp  flags.h  main.cpp
src/cuda/: CMakeLists.txt  cuda_proc.cu  cuda_proc.h  img_helper.cu  img_helper.cuh  proc.cu  proc.cuh
src/generators/: CMakeLists.txt  halide_generators.cpp
src/halide/: brighten_pipeline.h  find_target.h
src/image/: image.cpp  image.h
src/proc/: cpu_proc.cpp  cuda_proc.cpp  cuda_proc.h  halide_func.cpp  halide_func.h  halide_proc.cpp  halide_proc.h  proc.h
src/proc/empty_impl/: no_cuda_proc.cpp  no_halide_proc.cpp
src/tests/: CMakeLists.txt  cuda_test.cpp  halide_test.cpp  main.cpp
src/util/: conf.cpp  conf.h  flags.cpp  flags.h  timer.h
stage/: .eslintrc.json  .gitignore  PPStage.code-workspace  build_bin.sh  package-lock.json  package.json  tsconfig.json
stage/src/: app.tsx  global.d.ts  index.html  index.ts  preload.ts  renderer.ts  types.ts
stage/src/components/: Stage.tsx
stage/src/main/: handlers.ts  index.ts  node.d.ts  proc.ts
stage/src/renderer/: app.tsx  global.d.ts  index.css  preload.ts  theme.ts
stage/src/renderer/app/: constants.ts  hooks.ts
stage/src/renderer/components/: AdjustSlider.tsx  Control.tsx  ImageControl.tsx  ImageProcessor.tsx  Stage.tsx
stage/src/renderer/store/: fileSlice.ts  index.ts  metricsSlice.ts  store.ts
stage/src/store/: fileSlice.ts  store.ts
